--- a/Templates/AppSource App/.github/workflows/AddExistingAppOrTestApp.yaml
+++ b/Templates/AppSource App/.github/workflows/AddExistingAppOrTestApp.yaml
@@ -24,7 +24,11 @@ jobs:
     outputs:
       telemetryScopeJson: ${{ steps.init.outputs.telemetryScopeJson }}
     steps:
-      - id: init
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Initialize the workflow
+        id: init
         uses: microsoft/AL-Go-Actions/WorkflowInitialize@main
         with:
           eventId: "DO0090"
@@ -46,7 +50,10 @@ jobs:
     runs-on: [ windows-latest ]
     needs: [ Initialization, Update ]
     steps:
-      - name: Finalizing the workflow
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Finalize the workflow
         id: PostProcess
         uses: microsoft/AL-Go-Actions/WorkflowPostProcess@main
         with:
