--- a/Templates/AppSource App/.github/workflows/IncrementVersionNumber.yaml
+++ b/Templates/AppSource App/.github/workflows/IncrementVersionNumber.yaml
@@ -25,7 +25,11 @@ jobs:
     outputs:
       telemetryScopeJson: ${{ steps.init.outputs.telemetryScopeJson }}
     steps:
-      - id: init
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Initialize the workflow
+        id: init
         uses: microsoft/AL-Go-Actions/WorkflowInitialize@main
         with:
           eventId: "DO0096"
@@ -48,7 +52,7 @@ jobs:
     runs-on: [ windows-latest ]
     needs: [ Initialization, Update ]
     steps:
-      - name: Finalizing the workflow
+      - name: Finalize the workflow
         id: PostProcess
         uses: microsoft/AL-Go-Actions/WorkflowPostProcess@main
         with:
