--- a/Templates/AppSource App/.github/workflows/CreateApp.yaml
+++ b/Templates/AppSource App/.github/workflows/CreateApp.yaml
@@ -68,6 +68,9 @@ jobs:
     runs-on: [ windows-latest ]
     needs: [ Initialization, CreateApp ]
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
       - name: Finalize the workflow
         id: PostProcess
         uses: microsoft/AL-Go-Actions/WorkflowPostProcess@main
