--- a/Templates/AppSource App/.github/workflows/UpdateGitHubGoSystemFiles.yaml
+++ b/Templates/AppSource App/.github/workflows/UpdateGitHubGoSystemFiles.yaml
@@ -76,6 +76,9 @@ jobs:
     runs-on: [ windows-latest ]
     needs: [ Initialization, Update ]
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
       - name: Finalize the workflow
         id: PostProcess
         uses: microsoft/AL-Go-Actions/WorkflowPostProcess@main
