--- a/Templates/Per Tenant Extension/.github/workflows/CreateOnlineDevelopmentEnvironment.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/CreateOnlineDevelopmentEnvironment.yaml
@@ -88,6 +88,9 @@ jobs:
     runs-on: [ windows-latest ]
     needs: [ Initialization,  CreateEnvironment ]
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
       - name: Finalize the workflow
         id: PostProcess
         uses: microsoft/AL-Go-Actions/WorkflowPostProcess@main
