--- a/Templates/Per Tenant Extension/.github/workflows/CICD.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/CICD.yaml
@@ -243,9 +243,9 @@ jobs:
             }            
           }
           if (!($environmentName)) {
-            $envName = '${{ steps.envName.outputs.envName }}'
+            $environmentName = '${{ steps.envName.outputs.envName }}'
           }
-          $environmentName = $environmentName + '${{ matrix.environment }}'.SubString($envName.Length)
+          $environmentName = ($environmentName + '${{ matrix.environment }}'.SubString($envName.Length)).ToUpperInvariant()
           Write-Host "::set-output name=authContext::$authContext"
           Write-Host "set-output name=authContext::$authContext"
           Write-Host "::set-output name=environmentName::$environmentName"
